--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello bigga nigga mudsfsaf</title>
+	<title>hello  mudsfsaf</title>
 </head>
 <body>
-<h1>go fuck yourseld nigga</h1>
+<h1>go fuck yourseld a</h1>
 </body>
 </html>
